<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="registration_form">Registration Form</string>
    <string name="sign_up">Sign up</string>
    <string name="home">home</string>
    <string name="login">Login</string>
    <string name="LogoutButtonText">Logout</string>
    <string name="select_event_visibility">Select</string>
    <string name="event_location">Location</string>
    <string name="event_category">Category</string>
    <string name="event_description">Description</string>
    <string name="event_name">Name</string>
    <string name="create_event">Create Event</string>
    <string name="event_create_button">Create</string>
    <string name="pick_date">Pick a date</string>
    <string name="pick_time">Pick time</string>
    <string name="not_logged_in">Not logged in.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_card_name">This is the card name</string>
    <string name="create_event_text">Create Event</string>
    <string name="login_label">Login</string>
    <string name="todo_d">TODO :D</string>
    <string name="upload_image">Upload image</string>
    <string name="event_date_time_venue">Event Date, Time and Venue</string>
    <string name="event_image_description">Event Image Description</string>
    <string name="event_details">Event Details</string>
    <string name="event_details_static">Event Details:</string>
    <string name="event_category_static">Event Category:</string>
    <string name="back">Back</string>
    <string name="select_image">Select Image</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="UserName">User Name</string>
    <string name="user_attending">0 User(s) attending</string>
    <string name="users_attending_the_event">Users Attending the Event</string>
    <string name="searchHint">e.g. rock in: city hall by: pinocchio</string>
    <string name="search_events_hint">Search events</string>
    <string name="edit">edit</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="user_name">user name</string>
    <string name="user_email">user email</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="change_image">Change Image</string>
    <string name="change_time">Change Time</string>
    <string name="change_date">Change Date</string>
    <string name="event_edit_location" />
    <string name="event_edit_category" />
    <string name="event_edit_description" />
    <string name="edit_event_name" />
    <string name="save_changes_button">Save Changes</string>
    <string name="view_friend_requests">View Friend Requests</string>
    <string name="searchHintUserList">Search by username, full name, or mail</string>
    <string name="search_friends_hint">Search friends</string>
    <string name="full_name_of_the_user">Full Name of the User</string>
    <string name="full_name">Full Name:</string>
    <string name="event_date">event date</string>
    <string name="add_as_a_friend">Add as a Friend</string>
    <string name="search_for_events">Search for events:</string>
    <string name="event_buddy_information">Event Buddy Information</string>
</resources>