<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/charcoal"
    tools:visibility="visible">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:text="@string/event_name"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_name"
            app:endIconDrawable="@drawable/title_"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_edit_description"
            app:endIconDrawable="@drawable/description"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_edit_category"
            app:endIconDrawable="@drawable/category"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_edit_location"
            app:endIconDrawable="@drawable/location"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/event_Date"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="20dp"
                android:text="@string/change_date"
                app:icon="@drawable/date" />

            <Button
                android:id="@+id/event_time"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/charcoal"
                android:text="@string/change_time"
                android:textColor="@color/white"
                app:icon="@drawable/time" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/event_image"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="40dp"
                android:text="@string/change_image"
                app:icon="@drawable/pick_image" />

            <Spinner
                android:id="@+id/event_visibility_levels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="16dp"
                android:text="@string/select_event_visibility" />

        </LinearLayout>


        <Button
            android:id="@+id/event_create_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/charcoal"

            android:text="@string/save_changes_button" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
