<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:text="@string/create_event"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:textStyle="bold"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            app:endIconDrawable="@drawable/title_"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description"
            app:endIconDrawable="@drawable/description"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_location"
            app:endIconDrawable="@drawable/location"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinnerCategory"
            style="@android:style/Widget.DeviceDefault.Spinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/event_Date"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/pick_date"
                android:fontFamily="@font/jetbrains_mono_light"
                app:icon="@drawable/date" />

            <Button
                android:id="@+id/event_time"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jetbrains_mono_light"
                android:text="@string/pick_time"
                app:icon="@drawable/time" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/event_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="35dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/jetbrains_mono_light"
                android:text="@string/select_image"
                app:icon="@drawable/pick_image" />

            <Spinner
                android:id="@+id/event_visibility_levels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="16dp"
                android:text="@string/select_event_visibility" />

        </LinearLayout>


        <Button
            android:id="@+id/event_create_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:textSize="20sp"
            android:backgroundTint="@color/charcoal"
            android:layout_gravity="center_horizontal"
            android:text="@string/event_create_button"

            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>