<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="18dp"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:text="Login"
            android:textColor="?android:attr/colorForeground"
            android:textColorHint="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:hint="@string/username"
            android:textColorHint="?android:attr/colorForeground"
            app:endIconDrawable="@drawable/person_new"
            app:endIconMode="custom"
            app:endIconTint="@color/purple_light_haze">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/colorForeground" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="?android:attr/colorBackground"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="?android:attr/colorForeground"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?android:attr/colorForeground" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/attempt_login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:backgroundTint="@color/orange_neon"
            android:fontFamily="@font/jetbrains_mono_medium"
            android:text="@string/login"
            android:textColor="@color/charcoal"
            android:textSize="20sp"


            />


        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/jetbrains_mono_light"
            android:text="@string/don_t_have_account"
            android:textColor="?android:attr/colorForeground"
            android:textSize="15sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/orange_neon"
            android:fontFamily="@font/jetbrains_mono_light"
            android:text="Register"
            android:textColor="@color/charcoal" />

        <!--        <ImageView-->
        <!--            android:layout_width="200dp"-->
        <!--            android:layout_height="200dp"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@mipmap/flower_foreground" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>